--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "mongoose": "^7.5.3",
-    "next": "latest",
+    "next": "^13.5.4",
     "next-auth": "^4.23.1",
     "react": "latest",
     "react-dom": "latest"
